# quanAgent

./: .gitignore  AGENTS.md  README.md  agent_runtime.py  deepagent指南.md  demo.py  ducktools.py  html_tools.py  requirement.txt  run.py  run_wechat.py  run_wecom.py  test_playwright_pdf.py  testcopilot.py  time_tools.py  学习提示词  项目记录
agent-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
agent-frontend/scripts/: generate-icons.py  mock-sse-server.mjs
agent-frontend/src/: App.vue  main.ts
agent-frontend/src-tauri/: Cargo.toml  tauri.conf.json
agent-frontend/src-tauri/capabilities/: default.json  mobile.json
agent-frontend/src-tauri/icons/: icon.icns
agent-frontend/src-tauri/src/: lib.rs  main.rs
agent-frontend/src/api/: chat.ts  client.ts  sse.ts
agent-frontend/src/composables/: useMarkdown.ts  usePlatform.ts  useShortcuts.ts  useTheme.ts
channels/wechat/: accounts.py  api.py  bridge.py  commands.py  config.py  crypto.py  login.py  media.py  media_processor.py  media_storage.py  monitor.py  sender.py  session.py  sync_buf.py  types.py
channels/wecom/: bridge.py  client.py  config.py  handlers.py
workspace/: hello.md  loveu.txt  msft.txt  npc.txt  test.md
workspace/output/: DeepAgent学习内容整理.docx  DeepSeek开发实战完全指南.docx  GPT发展历史.xlsx  LangChain v1.0 学习指南.html  LangChain 学习指南.html  e2e-dashboard.html  e2e-test.html  langchain-learning.html  清华大学与五邑大学共同点调查报告.docx
workspace/tmp/: _render_e2e.html  blocks_data.json
workspace/workspace/: create_ai_news.py
(+52 files in other folders)
